<resources>
    <string name="app_name">Конвертер валют</string>
    <string name="convert_from">Конвертировать из</string>
    <string name="enter_value">Введите значение</string>
    <string name="convert_to">Конвертировать в</string>
    <string name="convert">Конвертировать</string>
    <string name="result">Результат:</string>
    <string name="ui_state_1">Первый вариант</string>
    <string name="ui_state_2">Второй вариант</string>
    <string name="ui_state_3">Третий вариант</string>
</resources>
